--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -7,9 +7,9 @@
 spring.datasource.url = jdbc:postgresql://pg:5432/studs?useSSL=false&useUnicode=true&characterEncoding=UTF-8&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 # Username and password
-spring.datasource.username =
-spring.datasource.password =
-spring.jpa.properties.hibernate.default_schema=
+spring.datasource.username = s224932
+spring.datasource.password = 2NgUjt
+spring.jpa.properties.hibernate.default_schema=s224932
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
