--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -55,7 +55,7 @@
                             <goal>npm</goal>
                         </goals>
                         <configuration>
-                            <arguments>run build</arguments>
+                            <arguments>run build --prod</arguments>
                         </configuration>
                         <phase>generate-resources</phase>
                     </execution>
