--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -40,3 +40,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # ===============================
 logging.level.org.springframework: TRACE
 logging.level.com: TRACE
+
+security.headers.frame=false
