--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -42,3 +42,17 @@ logging.level.org.springframework: TRACE
 logging.level.com: TRACE
 
 security.headers.frame=false
+
+## ===============================
+## = SSL
+## ===============================
+## The format used for the keystore. It could be set to JKS in case it is a JKS file
+#server.ssl.key-store-type=PKCS12
+## The path to the keystore containing the certificate
+#server.ssl.key-store=C:\\Users\\Lexmi\\Desktop\\test\\minin.p12
+## The password used to generate the certificate
+#server.ssl.key-store-password=changeit
+#server.ssl.key-password=changeit
+## The alias mapped to the certificate
+#server.ssl.key-alias=minin
+#server.ssl.enabled=true
