--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,15 +23,19 @@
     </properties>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>ru.guybydefault</groupId>-->
-<!--            <artifactId>frontend</artifactId>-->
-<!--            <version>1.0</version>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>      -->
+        <!--        <dependency>-->
+        <!--            <groupId>ru.guybydefault</groupId>-->
+        <!--            <artifactId>frontend</artifactId>-->
+        <!--            <version>1.0</version>-->
+        <!--            <scope>runtime</scope>-->
+        <!--        </dependency>      -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jersey</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
