Moved api url to config properties

--- a/lab2/src/main/resources/application.properties
+++ b/lab2/src/main/resources/application.properties
@@ -19,3 +19,4 @@ logging.level.com: TRACE
 ## The alias mapped to the certificate
 #server.ssl.key-alias=minin
 #server.ssl.enabled=true
+api.url = https://localhost:10241/Lab1_Server/api/flats
