--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,6 @@
     <modules>
         <module>frontend</module>
         <module>backend</module>
+        <module>ejb</module>
     </modules>
 </project>
