--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -3,13 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
+        <artifactId>Lab3</artifactId>
         <groupId>ru.guybydefault</groupId>
-        <artifactId>Lab1_Server</artifactId>
         <version>1.0</version>
     </parent>
-
     <artifactId>frontend</artifactId>
     <version>1.0</version>
 
