Lab4 initial commit

--- a/service2web/src/main/resources/application.properties
+++ b/service2web/src/main/resources/application.properties
@@ -2,42 +2,23 @@ server.port=10262
 
 spring.application.name=agency
 
-eureka.instance.hostname=localhost
-eureka.instance.preferIpAddress=false
-eureka.instance.lease-renewal-interval-in-seconds=2
-eureka.instance.lease-expiration-duration-in-seconds=5
-eureka.instance.secure-port-enabled=true
-eureka.instance.non-secure-port-enabled: false
-eureka.instance.secure-port=${server.port}
+#eureka.instance.hostname=localhost
+#eureka.instance.preferIpAddress=false
+#eureka.instance.lease-renewal-interval-in-seconds=2
+#eureka.instance.lease-expiration-duration-in-seconds=5
+#eureka.instance.secure-port-enabled=true
+#eureka.instance.non-secure-port-enabled: false
+#eureka.instance.secure-port=${server.port}
+#
+#eureka.client.registerWithEureka=true
+#eureka.client.fetchRegistry=true
+#eureka.client.initial-instance-info-replication-interval-seconds=1
+#eureka.client.registry-fetch-interval-seconds=5
+#eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:10251/eureka}
+#
+#ribbon.eureka.enabled=true
+#
+#logging.level.org.springframework: TRACE
+#logging.level.com: TRACE
 
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.initial-instance-info-replication-interval-seconds=1
-eureka.client.registry-fetch-interval-seconds=5
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:10251/eureka}
-
-ribbon.eureka.enabled=true
-
-#logging.level.com.netflix.eureka=OFF
-#logging.level.com.netflix.discovery=OFF
-# ===============================
-# = Logging
-# ===============================
-logging.level.org.springframework: TRACE
-logging.level.com: TRACE
-
-#security.headers.frame=false
-
-# ===============================
-# = SSL
-# ===============================
-## The format used for the keystore. It could be set to JKS in case it is a JKS file
-#server.ssl.key-store-type=PKCS12
-## The path to the keystore containing the certificate
-#server.ssl.key-store=C:\\Users\\Lexmi\\Desktop\\test\\minin.p12
-## The password used to generate the certificate
-#server.ssl.key-store-password=changeit
-## The alias mapped to the certificate
-#server.ssl.key-alias=minin
-#server.ssl.enabled=true
-api.url = https://main/service1web-1.0/api/flats
+api.url = http://localhost:10250/api/flats
